# empty_sciter_project

./: .clang-format-exclude  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
include/: main_window.h
src/: main.cpp  main_window.cpp
src/web/: main.htm
